; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_a10_codec.c_a10codec_fs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_a10_codec.c_a10codec_fs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.a10codec_chinfo = type { i32 }

@DAC_FS_48KHZ = common dso_local global i32 0, align 4
@DAC_FS_24KHZ = common dso_local global i32 0, align 4
@DAC_FS_12KHZ = common dso_local global i32 0, align 4
@DAC_FS_192KHZ = common dso_local global i32 0, align 4
@DAC_FS_32KHZ = common dso_local global i32 0, align 4
@DAC_FS_16KHZ = common dso_local global i32 0, align 4
@DAC_FS_8KHZ = common dso_local global i32 0, align 4
@DAC_FS_96KHZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.a10codec_chinfo*)* @a10codec_fs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @a10codec_fs(%struct.a10codec_chinfo* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.a10codec_chinfo*, align 8
  store %struct.a10codec_chinfo* %0, %struct.a10codec_chinfo** %3, align 8
  %4 = load %struct.a10codec_chinfo*, %struct.a10codec_chinfo** %3, align 8
  %5 = getelementptr inbounds %struct.a10codec_chinfo, %struct.a10codec_chinfo* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %23 [
    i32 48000, label %7
    i32 24000, label %9
    i32 12000, label %11
    i32 192000, label %13
    i32 32000, label %15
    i32 16000, label %17
    i32 8000, label %19
    i32 96000, label %21
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @DAC_FS_48KHZ, align 4
  store i32 %8, i32* %2, align 4
  br label %25

9:                                                ; preds = %1
  %10 = load i32, i32* @DAC_FS_24KHZ, align 4
  store i32 %10, i32* %2, align 4
  br label %25

11:                                               ; preds = %1
  %12 = load i32, i32* @DAC_FS_12KHZ, align 4
  store i32 %12, i32* %2, align 4
  br label %25

13:                                               ; preds = %1
  %14 = load i32, i32* @DAC_FS_192KHZ, align 4
  store i32 %14, i32* %2, align 4
  br label %25

15:                                               ; preds = %1
  %16 = load i32, i32* @DAC_FS_32KHZ, align 4
  store i32 %16, i32* %2, align 4
  br label %25

17:                                               ; preds = %1
  %18 = load i32, i32* @DAC_FS_16KHZ, align 4
  store i32 %18, i32* %2, align 4
  br label %25

19:                                               ; preds = %1
  %20 = load i32, i32* @DAC_FS_8KHZ, align 4
  store i32 %20, i32* %2, align 4
  br label %25

21:                                               ; preds = %1
  %22 = load i32, i32* @DAC_FS_96KHZ, align 4
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %1
  %24 = load i32, i32* @DAC_FS_48KHZ, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %21, %19, %17, %15, %13, %11, %9, %7
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
